# C-digos-Memoria

./: apendice_resultados_completos_por_escenario_y_lag.tex  escenarios_codispersion_resumen_126.csv
codispersion_github_template/: .gitignore  README.md  pyproject.toml  requirements.txt
codispersion_github_template/notebooks/: 01_primer_estudio.ipynb  02_segundo_estudio_matern.ipynb  03_tercer_estudio_monte_carlo.ipynb  04_cuarto_estudio_parallel_multi_b.ipynb  05_quinto_estudio_bb_vs_cbb.ipynb  06_sexto_estudio_grid.ipynb
codispersion_github_template/scripts/: plot_sexto_estudio.py  run_cuarto_estudio_parallel.py  run_primer_estudio.py  run_quinto_estudio_bb_vs_cbb.py  run_segundo_estudio_matern.py  run_sexto_estudio_grid.py  run_tercer_estudio_mc.py
codispersion_github_template/source_studies/: 01_primer_estudio.txt  02_segundo_estudio.txt  03_tercer_estudio.txt  04_cuarto_estudio.txt  05_quinto_estudio.txt  06_sexto_estudio.txt
codispersion_github_template/tests/: test_smoke.py
codispersion_real_case_template/: README.md  pyproject.toml  requirements.txt
codispersion_real_case_template/notebooks/: 01_preprocesamiento_diagnostico_caso_real_A.ipynb  02_preprocesamiento_diagnostico_sinteticos_B.ipynb  03_preprocesamiento_diagnostico_microdatos_C.ipynb  04_implementacion_formal_coef.ipynb  05_seleccion_b.ipynb  06_bootstrap_espacial_pareado_cbb_mbb.ipynb
codispersion_real_case_template/results/: boot_codisp_AB_CBB_test.csv  boot_codisp_CD_CBB_test.csv
codispersion_real_case_template/scripts/: run_01_caso_real_A.py  run_02_sinteticos_B.py  (+4 more)
(+33 files in other folders)
