[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codispersion-bootstrap"
version = "0.1.0"
description = "Herramientas para codispersión y bootstrap espacial en grillas 2D."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["src"]
